Update to recent github sourced rometools.